--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.css-ki1hdl-MuiAlert-action{
+  padding: 3px 0 0 16px !important;
+}
