Updated design and integrated api

--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,9 @@ label[data-shrink="false"]
 .css-cveggr-MuiListItemIcon-root{
   min-width: 30px !important;
 }
+.css-1mg3ppa{
+  height: 80% !important;
+}
 
 /* li::marker {
   font-size: 35px !important;
