static version completed

--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,19 @@ label[data-shrink="false"]
 .css-1mg3ppa{
   height: 80% !important;
 }
+.css-gqsjjr-MuiPaper-root{
+  height: 500px !important;
+}
+.css-1xnwkla-MuiTypography-root{
+  color:'grey !important'
+}
+.css-qg2r3e-MuiPaper-root{
+  height: 612px !important;
+}
+.css-3hgfyk-MuiPaper-root{
+  height: 456px !important;
+
+}
 
 /* li::marker {
   font-size: 35px !important;
