--- a/src/index.css
+++ b/src/index.css
@@ -81,6 +81,14 @@ label[data-shrink="false"]
 .css-i9fmh8-MuiBackdrop-root-MuiModal-backdrop{
   background-color: #fff !important;
 }
+.css-yyeuwg-MuiPaper-root{
+  height: 606px !important;
+
+}
+.css-y0jw9j-MuiPaper-root{
+  height: 606px !important;
+  box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%), 0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%) !important;
+}
 
 /* li::marker {
   font-size: 35px !important;
