--- a/src/index.css
+++ b/src/index.css
@@ -89,7 +89,14 @@ label[data-shrink="false"]
   height: 606px !important;
   box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%), 0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%) !important;
 }
+.css-1knozfg-MuiPaper-root{
+  height: 500px !important;
+}
 
+.css-83ijpv-MuiTypography-root {
+  font-size: 12px !important;
+  line-height: 0;
+}
 /* li::marker {
   font-size: 35px !important;
   padding: 0px !important;
