--- a/src/index.css
+++ b/src/index.css
@@ -97,6 +97,9 @@ label[data-shrink="false"]
   font-size: 12px !important;
   line-height: 0;
 }
+/* .css-bgdwz5-MuiPaper-root{
+  box-shadow: 0px 2px 1px -1pxrgba(0,0,0,0.2),0px 1px 1px 0pxrgba(0,0,0,0.14),0px 1px 3px 0pxrgba(0,0,0,0.12) !important;
+} */
 /* li::marker {
   font-size: 35px !important;
   padding: 0px !important;
