--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,7 @@ label[data-shrink="false"]
 }
 .css-11nyqjp-MuiButtonBase-root-MuiTab-root {
   min-width: 0 !important;
+  overflow-x: auto !important;
 }
 .css-i4bv87-MuiSvgIcon-root {
   height: 20px !important;
@@ -86,7 +87,7 @@ label[data-shrink="false"]
 
 }
 .css-y0jw9j-MuiPaper-root{
-  height: 606px !important;
+  min-height: 606px !important;
   box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%), 0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%) !important;
 }
 .css-1knozfg-MuiPaper-root{
@@ -96,6 +97,9 @@ label[data-shrink="false"]
 .css-83ijpv-MuiTypography-root {
   font-size: 12px !important;
   line-height: 0;
+}
+.css-1py9fd3{
+    height: 582px !important;
 }
 /* .css-bgdwz5-MuiPaper-root{
   box-shadow: 0px 2px 1px -1pxrgba(0,0,0,0.2),0px 1px 1px 0pxrgba(0,0,0,0.14),0px 1px 3px 0pxrgba(0,0,0,0.12) !important;
